--- a/rest-client/src/App.css
+++ b/rest-client/src/App.css
@@ -37,7 +37,6 @@
   }
 }
 
-
 .title {
   font-family: "Abril Fatface", serif;
   color: white;
@@ -48,3 +47,80 @@
   font-style: normal;
   color: white;
 }
+
+.form {
+  position: relative;
+}
+
+.form .fa-search {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  color: #9ca3af;
+}
+
+.form .fa-eye-slash {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+  color: #9ca3af;
+}
+
+.form .fa-eye {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+  color: #9ca3af;
+}
+.form-input {
+  height: 45px;
+  text-indent: 33px;
+  border-radius: 10px;
+}
+
+.form-input:focus {
+  box-shadow: none;
+  border: none;
+}
+
+.nav-link.active {
+  color: #77b890 !important;
+}
+
+.nav-link {
+  color: #77b890 !important;
+}
+.transparent-input .form-control {
+  background-color: transparent !important;
+}
+/* .form-control-custom {
+  color: #77b890 !important;
+  width: 4rem !important;
+  box-shadow: 0 0 0 0 #77b890 !important;
+  border-color: #77b890 !important;
+  border-bottom: 2px solid #77b890 !important;
+  background-color: transparent !important;
+}
+
+.form-control-custom:focus {
+  color: #77b890 !important;
+  width: 4rem !important;
+  border-color: #77b890 !important;
+  border-bottom: 3px solid var(--secondary) !important;
+  outline: 0;
+  transition: all 0.3s ease-in;
+  box-shadow: 0 0 0 0 #77b890 !important;
+  background-color: transparent !important;
+}
+
+.form-control-custom:hover option,
+.form-control-custom:focus option {
+  text-decoration: none;
+  color: #b8777d !important;
+  background-color: transparent !important;
+  border-color: #77b890 !important;
+}
+/* .form-control-custom option::selection {
+  background-color: #77b890 !important;
+  color: #fff; 
+} */
