--- a/rest-client/src/index.css
+++ b/rest-client/src/index.css
@@ -1,8 +1,11 @@
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Libre Bodoni", serif;
+  font-weight: 400;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
 }
 
 code {
